2014-01-09  Joseph Pecoraro  <pecoraro@apple.com>

        Unreviewed Windows build fix for r161563.

        Remove stale forward declaration causing namespace ambiguity
        later on in a Windows AllInOne file that picked it up. Also
        remove a few stale functions that are not used and accidentally
        got added back in when the file changed names.

        * bindings/js/ScriptGlobalObject.h:

2014-01-09  Dean Jackson  <dino@apple.com>

        [WebGL] Expose texture_float_linear and texture_half_float to getSupportedExtensions
        https://bugs.webkit.org/show_bug.cgi?id=126732

        Reviewed by Tim Horton.

        When I added support for these two extensions, I forgot to add their
        names to the list in getSupportedExtensions.

        Covered by the Khronos test: conformance/extensions/get-extension.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getSupportedExtensions): Add OES_texture_float_linear
        and OES_texture_half_float if the WebGL context supports them.

2014-01-09  Joseph Pecoraro  <pecoraro@apple.com>

        Revert r161611, incorrect fix, will fix better.

        * bindings/js/ScriptGlobalObject.h:

2014-01-09  Jer Noble  <jer.noble@apple.com>

        [Mac] Scrubbing performance of HD content with software decoding is poor.
        https://bugs.webkit.org/show_bug.cgi?id=126705

        Reviewed by Eric Carlson.

        Instead of issuing a new seek before the previous one completes, wait until that seek's
        completion handler is called, and then issue the new seek. This has the added benefit of
        coalescing multiple incoming seeks so that only the last one is acted upon.

        Save the parameters passed into seekToTime and bind them together in a std::function
        to be replayed once the in-flight seek completes. To handle the case where a completion
        handler fires after the media player is destroyed, add a weakPtrFactory and pass a